Footer table smaller and edit text

--- a/base.css
+++ b/base.css
@@ -131,10 +131,12 @@ a {
     margin: 0;
     padding: 0;
     text-decoration: none;
+    font-weight: normal;
 }
 .footerLink:hover {
     color: #C0392B;
     text-decoration: none;
+    font-weight: normal;
 }
 .shareButtons {
     position: absolute;
@@ -146,15 +148,7 @@ a {
 
 #footerTable {
     position:       relative;
-    height:         190px;
-    width:          65%;
-    margin-top:     20px;
-    margin-bottom:  20px;
+    height:         100px;
+    width:          55%;
     text-align:     center;
 }
-
-
-
-
-
-
