--- a/base.css
+++ b/base.css
@@ -183,6 +183,7 @@ a {
 
 .inputFooter {
     padding: 3px;
+    padding-left: 5px;
     background: #FFFFFF;
     border: 2px solid #000000;
     border-radius: 6px;
