--- a/base.css
+++ b/base.css
@@ -49,8 +49,8 @@ a {
     color: #626668;
     font-family: 'Roboto';
     font-size: 38px;
-    margin-bottom: 20px;
-    margin-top: 50px;
+    margin-bottom: 10px;
+    margin-top: 40px;
 }
 .homepageMessage {
     color: #000;
@@ -220,4 +220,13 @@ a {
 .actionButtonMini:hover {
     background: none repeat scroll 0 0 #E74C3C;
     text-decoration: none;
+}
+
+.buttonImg {
+    height: 50px;
+    margin: 20px;
+}
+
+.platformImg {
+    height: 22px;        
 }
