--- a/base.css
+++ b/base.css
@@ -28,6 +28,7 @@ a {
 .actionButton:hover {
     background: none repeat scroll 0 0 #E74C3C;
     text-decoration: none;
+    box-shadow: 0 0 5px #000000;
 }
 .actionButtonGreen {
     background: none repeat scroll 0 0 #27AE60;
@@ -166,33 +167,32 @@ a {
     padding: 5px;
     margin-top: 40px;
     background: #FFFFFF;
-    border: 2px solid #000000;
+    border: 1px solid #828282;
     border-radius: 6px;
-    box-shadow: 0 0 3px #000000;
 
     font-size: 24px;
     font-family: 'Roboto';
-    line-weight: light;
+    font-weight: 100;
     height: 50px;
     width: 65%;
     text-align: center; 
 }
 
 .inputMain:hover {
-    background: #8eadcd;
+    background: #FFFFFF;
+    box-shadow: 0 0 5px #000000;    
 }
 
 .inputFooter {
     padding: 3px;
     padding-left: 5px;
     background: #FFFFFF;
-    border: 2px solid #000000;
+    border: 1px solid #FFFFFF;
     border-radius: 6px;
-    box-shadow: 0 0 3px #000000;
 
-    font-size: 16px;
+    font-size: 18px;
     font-family: 'Roboto';
-    line-weight: light;
+    font-weight: 100;
     height: 35px;
     width: 100%;
     text-align: left; 
@@ -200,7 +200,7 @@ a {
 }
 
 .inputFooter:hover {
-    background: #8eadcd;
+    box-shadow: 0 0 4px #000000;
 }
 
 .actionButtonMini {
@@ -208,12 +208,12 @@ a {
     border-radius: 6px 6px 6px 6px;
     color: #ECF0F1;
     font-family: 'Roboto';
-    font-size: 16px;
+    font-size: 18px;
     height: 45px;
     line-height: 45px;
     margin-top: 0px;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
     text-align: center;
     width: 100%;
 }
@@ -221,6 +221,7 @@ a {
 .actionButtonMini:hover {
     background: none repeat scroll 0 0 #E74C3C;
     text-decoration: none;
+    box-shadow: 0 0 4px #000000;
 }
 
 .buttonImg {
