--- a/base.css
+++ b/base.css
@@ -180,16 +180,15 @@ a {
 
 .inputMain:hover {
     background: #FFFFFF;
-    box-shadow: 0 0 5px #000000;    
+    box-shadow: inset 0 0 3px #029C40;
 }
 
 .inputFooter {
     padding: 3px;
     padding-left: 5px;
     background: #FFFFFF;
-    border: 1px solid #FFFFFF;
     border-radius: 6px;
-
+    border: 0px;
     font-size: 18px;
     font-family: 'Roboto';
     font-weight: 100;
@@ -200,7 +199,7 @@ a {
 }
 
 .inputFooter:hover {
-    box-shadow: 0 0 4px #000000;
+    box-shadow: inset 0 0 2px #000000;
 }
 
 .actionButtonMini {
@@ -221,7 +220,6 @@ a {
 .actionButtonMini:hover {
     background: none repeat scroll 0 0 #E74C3C;
     text-decoration: none;
-    box-shadow: 0 0 4px #000000;
 }
 
 .buttonImg {
