--- a/base.css
+++ b/base.css
@@ -16,7 +16,7 @@ body {
     font-size: 24px;
     height: 65px;
     line-height: 65px;
-    margin-top: 25px;
+    margin-top: 10px;
     margin-left: 0px;
     margin-right: 0px;
     text-align: center;
@@ -28,7 +28,7 @@ a {
 .actionButton:hover {
     background: none repeat scroll 0 0 #E74C3C;
     text-decoration: none;
-    box-shadow: 0 0 5px #000000;
+    box-shadow: 0 0 5px #029C40;
 }
 .actionButtonGreen {
     background: none repeat scroll 0 0 #27AE60;
@@ -198,7 +198,7 @@ a {
 
 }
 
-.inputFooter:hover {
+.inputFooter:active {
     box-shadow: inset 0 0 2px #000000;
 }
 
@@ -217,7 +217,7 @@ a {
     width: 100%;
 }
 
-.actionButtonMini:hover {
+.actionButtonMini:active {
     background: none repeat scroll 0 0 #E74C3C;
     text-decoration: none;
 }
