--- a/base.css
+++ b/base.css
@@ -34,27 +34,11 @@ body {
 a {
     text-decoration: none;
 }
-.actionButton:hover {
+.actionButton:active, .actionButton:focus, .actionButton:hover {
     background: none repeat scroll 0 0 #E74C3C;
     text-decoration: none;
-    box-shadow: 0 0 5px #029C40;
 }
-.actionButtonGreen {
-    background: none repeat scroll 0 0 #27AE60;
-    border-radius: 6px 6px 6px 6px;
-    color: #ECF0F1;
-    font-family: 'Roboto';
-    font-size: 24px;
-    height: 90px;
-    line-height: 90px;
-    margin-top: 50px;
-    text-align: center;
-    width: 280px;
-}
-.actionButtonGreen:hover {
-    background: none repeat scroll 0 0 #2ECC71;
-    text-decoration: none;
-}
+
 .homepageMessageTitle {
     color: #626668;
     font-family: 'Roboto';
@@ -208,7 +192,7 @@ a {
     text-align: center; 
 }
 
-.inputMain:hover {
+.inputMain:active, .inputMain:focus, .inputMain:hover {
     background: #FFFFFF;
     box-shadow: inset 0 0 3px #029C40;
 }
@@ -228,7 +212,7 @@ a {
 
 }
 
-.inputFooter:active {
+.inputFooter:active, .inputFooter:focus, .inputFooter:hover {
     box-shadow: inset 0 0 2px #000000;
 }
 
@@ -247,16 +231,14 @@ a {
     width: 100%;
 }
 
-.actionButtonMini:active {
+.actionButtonMini:active, .actionButtonMini:focus, .actionButtonMini:hover {
     background: none repeat scroll 0 0 #E74C3C;
     text-decoration: none;
 }
 
 .buttonImg {
     height: 50px;
-    margin: 20px;
-}
-
-.platformImg {
-    height: 22px;        
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-top: 10px;
 }
