Add HairStory logo

--- a/stylesheet/base.css
+++ b/stylesheet/base.css
@@ -260,3 +260,16 @@ a {
 .platformImg {
     height: 22px;        
 }
+
+/* Logo */
+.logo {
+    font-family: 'NexaHeavy';
+    color: #C0392B;
+    font-size: 52px;
+    font-weight: normal;
+    font-style: normal;
+}
+
+.logoContainer {
+    padding: 15px 0px 15px 0px;
+}
