--- a/stylesheet/base.css
+++ b/stylesheet/base.css
@@ -5,6 +5,7 @@ html {
     padding: 0;
 }
 body {
+    height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -92,20 +93,7 @@ a {
     font-weight: normal;
     margin-top: 50px;   
 }
-.aboutpageTextTitle {
-    color: #626668;
-    font-family: 'Roboto';
-    font-size: 26px;
-    font-weight: normal;
-    margin-top: 50px;   
-}
-.aboutpageText {
-    color: #626668;
-    font-family: 'Roboto';
-    font-size: 22px;
-    margin-top: 30px;
-    font-weight: 100;
-}
+
 .boxWrapper {
     height: 400px;
     margin: 0 auto;
@@ -114,7 +102,7 @@ a {
 }
 .boxContainer {
     margin: 0 auto;
-    width: 95%;
+    width: 100%;
     min-width: 960px;
     max-width: 1152px;
 }
@@ -162,17 +150,17 @@ a {
     width: 100%;
 }
 
-#footerTable {
-    position:       relative;
-    height:         100px;
-    width:          100%;
-    text-align:     center;
+.footerTable {
+    height: 100px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .footerTD {
     white-space:  nowrap;
     width: 1%;
-    text-align: center;   
+    text-align: center;  
+    vertical-align: middle; 
 }
 
 .inputMain {
@@ -240,6 +228,66 @@ a {
     margin-left: 20px;
     margin-top: 10px;
 }
+
+/* *** about.html *** */
+
+.abFtrWrapper {
+    background: #FFF;
+    height: 100px;
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+}
+
+.abFtrContainer {
+    margin: 0 auto;
+    width: 100%;
+    min-width: 960px;
+    max-width: 1152px;
+}
+
+#header {
+    margin: 0;
+}
+
+#body {
+    margin: 0;
+    padding-bottom: 100px;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+}
+
+#pageContainer {
+    min-height: 100%;
+    position: relative;
+}
+
+.aboutpageTextTitle {
+    color: #626668;
+    font-family: 'Roboto';
+    font-size: 26px;
+    font-weight: normal;
+    margin-top: 50px;   
+}
+.aboutpageText {
+    color: #626668;
+    font-family: 'Roboto';
+    font-size: 22px;
+    margin-top: 30px;
+    font-weight: 100;
+}
+
+/* *** Other *** */
+
+#socialMedia {
+
+}
+
 
 /* Logo */
 .logo {
