--- a/stylesheet/base-rf.css
+++ b/stylesheet/base-rf.css
@@ -9,52 +9,164 @@ html, body {
 	background: #ECF0F1;
 }
 
+.left {
+	text-align: left;
+}
+
+.right {
+	text-align: right;
+}
+
 a {
 	text-decoration: none;
 }
+
+img {
+	border: 0;
+}
+
+
 
 header {
 	background: #ECF0F1;
 	padding: 0;
 	position: relative;
-	top: 0px;
-	text-align: center;
 }
 
 header.index {
-	min-height: 750px;
-	max-height: ;
+	height: 95%;
+	min-height: 800px;
 }
 
 #headerLogo {
-	padding: 40px 0px 15px 0px;
+	padding: 80px 0 5px 0;
+	margin: 0 auto 0 auto;
+	height: 20%;
+	min-height: 120px;
+	text-align: center;
 }
 
 .logo {
 	position: relative;
-    font-size: 56px;
+    font-size: 70px;
     color: #C0392B;
     font-family: 'NexaHeavy';
     font-weight: normal;
-    line-height: 56px;
+    line-height: 70px;
 }
+
+/* The following lines create inset effect */
+.logo:before, .logo:after {
+	position: absolute;
+	color: rgba(255,255,255,.1);
+	content: 'HairStory';
+}
+.logo:before { top: 3px; left: 3px; }
+.logo:after { top: 5px; left: 5px; }
 
 #headerDiv {
 	display: table;
-	height: 550px;
-	min-width: 960px;
-	max-width: 1152px;
+	height: 100%;
+	min-height: 550px;
+	width: 70%;
+	min-width: 1024px;
+	margin: 0 auto;
+	padding-top: 5px;
 }
 
-#headerDivLeft {
+#headerDivImg {
 	display: table-cell;
 	vertical-align: middle;
+	float: left;
+	width: 50%;
+	margin: 5px 10px 10px 0px;
 }
 
-#headerDivRight {
+#ipadImg {
+	width: 100%;
+	min-width: 500px;
+	margin: 0 auto;
+}
+
+#headerDivContent {
 	display: table-cell;
 	vertical-align: middle;
+	text-align: right;
+	float: right;
+	width: 45%;
+	padding-top: 25px;
+	margin: 5px 10px 10px 0px;
 }
+
+#headerTagline {
+	color: #626668;
+    font-family: 'Roboto';
+    font-size: 36px;
+    margin-bottom: 40px;
+}
+
+#centerInset {
+	position: relative;
+	padding-top: 50px;
+	padding-bottom: 10px;
+	text-align: center;
+	margin: 0 10px 0 100px;
+}
+
+#insetTagline {
+	color: #000;
+    font-family: 'Roboto';
+    font-size: 22px;
+    font-weight: 100;
+}
+
+#inputMain {
+	padding: 5px;
+	margin: 0 auto;
+    background: #FFFFFF;
+    border: 1px solid #828282;
+    border-radius: 6px;
+
+    font-size: 24px;
+    font-family: 'Roboto';
+    font-weight: 100;
+    height: 50px;
+    width: 85%;
+    text-align: center; 
+}
+
+#inputMain:active, #inputMain:focus, #inputMain:hover {
+    background: #FFFFFF;
+    box-shadow: inset 0 0 3px #029C40;
+}
+
+#actionButton {
+    background: none repeat scroll 0 0 #C0392B;
+    border-radius: 6px 6px 6px 6px;
+    color: #ECF0F1;
+    font-family: 'Roboto';
+    font-size: 24px;
+    height: 65px;
+    line-height: 65px;
+    margin: 0 auto;
+    margin-top: 10px;
+    text-align: center;
+    width: 87%;
+}
+
+#actionButton:active, #actionButton:focus, #actionButton:hover {
+    background: none repeat scroll 0 0 #E74C3C;
+    text-decoration: none;
+}
+
+.buttonImg {
+    height: 50px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+
 
 #content {
 	position: relative;
@@ -62,7 +174,6 @@ header.index {
 
 footer {
 	position: relative;
-	bottom: 0px;
 	height: 100px;
 }
 
@@ -106,3 +217,4 @@ footer.index {
 #div4 {
 	background: #029C40;
 }
+
