--- a/stylesheet/base-rf.css
+++ b/stylesheet/base-rf.css
@@ -175,6 +175,8 @@ header.index {
 footer {
 	position: relative;
 	height: 100px;
+	width: 75%;
+	margin: 0 auto;
 }
 
 footer.index {
@@ -194,12 +196,50 @@ footer.index {
 }
 
 
-#footerLinks {
-
+.footerLinks {
+	margin: 0 auto;
+	position: relative;
+	float: left;
+	width: 50%;
+	height: 100px;
+	text-align: left;
+	vertical-align: middle;
 }
 
-#footerShare {
+.footerLink {
+	margin: 0 auto;
+    padding-right: 50px;
+    padding-left: 0;
+	color: grey;
+    font-family: 'Roboto';
+    font-size: 20px;
+    line-height: 100px;
+    text-decoration: none;
+    font-weight: normal;
+}
 
+.footerLink:hover, .footerLink:focus, .footerLink:active {
+	color: #C0392B;
+	text-decoration: none;
+	font-weight: normal;
+}
+
+.footerShare {
+	margin: 0;
+	padding: 30px 0;
+	position: relative;
+	float: right;
+	text-align: right;
+	width: 50%;
+}
+
+.footerShareButton {
+	margin: 0;
+	padding: 0;
+	display: inline-block;
+	vertical-align: middle;
+	width: 38px;
+	height: 40px;
 }
 
 #div1 {
