--- a/stylesheet/base-rf.css
+++ b/stylesheet/base-rf.css
@@ -223,33 +223,33 @@ header.index {
 
 .contentDivImg {
 	position: absolute;
-	top: 0;
-	right: 0;
+	top: 50%;
 	bottom: 0;
-	left: 50%;
 	text-align: center;
-	margin: 0 auto;
+	margin: -187px auto 0;
 	padding: 0;
 }
 
 .contentDivBody {
 	position: absolute;
-	vertical-align: middle;
-	text-align: left;
-	width: 40%;
-	margin: 0 auto;
-	padding: 50px 0;
+	top: 0;
+	bottom: 0;
+
+	height: 50%;
+	width: 36%;
+
+	margin: auto;
 }
 
 /* set floats and margin-left or -right to flip */
-#div1 .contentDivImg { float: right; padding-left: 0; padding-right: 5px; }
-#div1 .contentDivBody { float: left; padding-left: 5px; padding-right: 0; }
-#div2 .contentDivImg { float: left; padding-left: 20%; padding-right: 0; }
-#div2 .contentDivBody { float: right; padding-left: 0; padding-right: 20%; }
-#div3 .contentDivImg { float: right; padding-left: 0; padding-right: 20%; }
-#div3 .contentDivBody { float: left; padding-left: 20%; padding-right: 0; }
-#div4 .contentDivImg { float: left; padding-left: 20%; padding-right: 0; }
-#div4 .contentDivBody { float: right; padding-left: 0; padding-right: 20%; }
+#div1 .contentDivImg { float: right; left: 40%; right: 0; }
+#div1 .contentDivBody { float: left; right: 50%; }
+#div2 .contentDivImg { float: left; left: 0; right: 40%; }
+#div2 .contentDivBody { float: right; left: 50%; }
+#div3 .contentDivImg { float: right; left: 40%; right: 0; }
+#div3 .contentDivBody { float: left; right: 50%; }
+#div4 .contentDivImg { float: left; left: 0; right: 40%; }
+#div4 .contentDivBody { float: right; left: 50%; }
 
 .contentDivBodyTitle {
 	color: #ECF0F1;
@@ -257,6 +257,7 @@ header.index {
 	font-size: 32px;
 	font-weight: normal;
 	margin-top: 30px;
+	text-align: left;
 }
 
 .contentDivBodyText {
@@ -264,6 +265,7 @@ header.index {
 	font-family: 'Roboto';
 	font-size: 22px;
 	font-weight: 100;
+	text-align: left;
 }
 
 .contentDivBodyText b {
@@ -276,8 +278,8 @@ header.index {
 	min-width: 500px;
 	margin: 0 auto;
 }
-#img2 {
-	width: 400px;
+.imgContent {
+	height: 375px;
 	margin: 0 auto;
 }
 #img3 {
