Fix css typo and headerDiv height

--- a/stylesheet/base-rf.css
+++ b/stylesheet/base-rf.css
@@ -87,10 +87,9 @@ header.index {
 
 #headerDiv {
 	display: table;
-	height: 100%;
 	min-height: 550px;
 	width: 70%;
-	margin: 0 auto;
+	margin: auto;
 	padding-top: 5px;
 }
 
