--- a/stylesheet/base-rf.css
+++ b/stylesheet/base-rf.css
@@ -1,6 +1,7 @@
 /* *** general *** */
 
 html, body {
+	font-size: 100%;
 	border: 0;
 	height: 100%;
 	padding: 0;
@@ -108,44 +109,37 @@ header.index {
 	text-align: right;
 	float: right;
 	width: 45%;
-	padding-top: 25px;
+	padding-top: 2em;
 	margin: 5px 10px 10px 0px;
 }
 
 #headerTagline {
 	color: #34495e;
     font-family: 'Roboto';
-    font-size: 36px;
-    margin-bottom: 40px;
+    font-size: 2.3em;
 }
 
 #centerInset {
 	position: relative;
-	padding-top: 50px;
-	padding-bottom: 10px;
+	padding-top: 2.5em;
+	padding-bottom: .75em;
 	text-align: center;
-	margin: 0 10px 0 100px;
-}
-
-#insetTagline {
-	color: #000;
-    font-family: 'Roboto';
-    font-size: 22px;
-    font-weight: 100;
+	left: 3em;
+	right: 0;
 }
 
 #inputMain {
-	padding: 5px;
+	padding: .25em;
 	margin: 0 auto;
     background: #FFFFFF;
     border: 1px solid #828282;
     border-radius: 6px;
 
-    font-size: 24px;
+    font-size: 1.5em;
     font-family: 'Roboto';
     font-weight: 100;
-    height: 50px;
-    width: 85%;
+    height: 2em;
+    width: 20em;
     text-align: center; 
 }
 
@@ -155,17 +149,22 @@ header.index {
 }
 
 #actionButton {
-    background: none repeat scroll 0 0 #C0392B;
-    border-radius: 6px 6px 6px 6px;
-    color: #ECF0F1;
-    font-family: 'Roboto';
-    font-size: 24px;
-    height: 65px;
-    line-height: 65px;
+    padding: .25em;
     margin: 0 auto;
-    margin-top: 10px;
+    background: none repeat scroll 0 0 #C0392B;
+    border: 1px solid #C0392B;
+    border-radius: 6px;
+
+    font-size: 1.5em;
+    font-family: 'Roboto';
+    height: 2em;
+    line-height: 2em;
+    width: 20em;
     text-align: center;
-    width: 87%;
+
+    color: #ECF0F1;
+    margin-top: .5em;
+    margin-bottom: 1.5em;
 }
 
 #actionButton:active, #actionButton:focus, #actionButton:hover {
@@ -173,11 +172,21 @@ header.index {
     text-decoration: none;
 }
 
+#insetTagline {
+	color: #000;
+	font-size: 1.5em;
+    font-family: 'Roboto';
+    font-weight: 100;
+}
+
+#buttonImgWrapper {
+	margin-top: 1em;
+
+}
+
 .buttonImg {
-    height: 50px;
-    margin-right: 20px;
-    margin-left: 20px;
-    margin-top: 10px;
+    height: 3.5em;
+    margin: 0 1.5em;
 }
 
 /*
