--- a/stylesheet/base-rf.css
+++ b/stylesheet/base-rf.css
@@ -60,10 +60,9 @@ header.index {
 }
 
 .headerLogo {
-	padding: 80px 0 5px 0;
+	padding: 70px 0 0 0;
 	margin: 0 auto;
-	height: 20%;
-	min-height: 120px;
+	height: 130px;
 	text-align: center;
 	position: relative;
 }
@@ -82,47 +81,54 @@ header.index {
 	position: absolute;
 	color: rgba(255,255,255,.1);
 	content: 'HairStory';
-}
+}	
 .logo:before { top: 3px; left: 3px; }
 .logo:after { top: 5px; left: 5px; }
 
 #headerDiv {
-	display: table;
-	min-height: 550px;
-	min-width: 900px;
-	width: 70%;
-	margin: auto;
-	padding-top: 5px;
+	position: relative;
+	height: calc(100% - 235px);
+	min-height: 665px;
+	width: 1300px;
+	top: 8%;
+	margin: 0 auto;
 }
 
 #headerDivImg {
-	display: table-cell;
-	vertical-align: middle;
-	float: left;
-	width: 50%;
-	margin: 5px 10px 10px 0px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 55%;
+	margin: auto;
+}
+
+#img1 {
+	width: 100%;
+	margin: 0 auto;
 }
 
 #headerDivBody {
-	display: table-cell;
-	vertical-align: middle;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 55%;
+	right: 0;
 	text-align: right;
-	float: right;
-	width: 45%;
-	padding-top: 2em;
-	margin: 5px 10px 10px 0px;
+	margin: auto;
 }
 
 #headerTagline {
 	color: #34495e;
     font-family: 'Roboto';
-    font-size: 2.3em;
+    font-size: 2.1em;
+    letter-spacing: 0.05em;
 }
 
 #centerInset {
 	position: relative;
-	padding-top: 2.5em;
-	padding-bottom: .75em;
+	padding-top: 5%;
+	padding-bottom: 5%;
 	text-align: center;
 	left: 3em;
 	right: 0;
@@ -279,12 +285,6 @@ header.index {
 .contentDivBodyText b {
 	font-family: 'Roboto';
 	font-weight: 500;
-}
-
-#img1 {
-	width: 100%;
-	min-width: 500px;
-	margin: 0 auto;
 }
 
 .imgContent {
