Scale elements in headerDivBody for 1440x900 displays

--- a/stylesheet/base-rf.css
+++ b/stylesheet/base-rf.css
@@ -90,7 +90,7 @@ header.index {
 	height: calc(100% - 235px);
 	min-height: 665px;
 	width: 1300px;
-	top: 8%;
+	top: 5%;
 	margin: 0 auto;
 }
 
@@ -127,8 +127,8 @@ header.index {
 
 #centerInset {
 	position: relative;
-	padding-top: 5%;
-	padding-bottom: 5%;
+	padding-top: 6%;
+	padding-bottom: 6%;
 	text-align: center;
 	left: 3em;
 	right: 0;
@@ -141,11 +141,12 @@ header.index {
     border: 1px solid #828282;
     border-radius: 6px;
 
-    font-size: 1.5em;
+    font-size: 1.3em;
     font-family: 'Roboto';
     font-weight: 100;
-    height: 2em;
-    width: 20em;
+    height: 1.8em;
+    min-width: 13em;
+    width: 75%;
     text-align: center; 
 }
 
@@ -161,16 +162,17 @@ header.index {
     border: 1px solid #C0392B;
     border-radius: 6px;
 
-    font-size: 1.5em;
+    font-size: 1.3em;
     font-family: 'Roboto';
-    height: 2em;
-    line-height: 2em;
-    width: 20em;
+    height: 1.8em;
+    line-height: 1.8em;
+    min-width: 13em;
+    width: 75%;
     text-align: center;
 
     color: #ECF0F1;
     margin-top: .5em;
-    margin-bottom: 1.5em;
+    margin-bottom: 1.75em;
 }
 
 #actionButton:active, #actionButton:focus, #actionButton:hover {
@@ -180,19 +182,18 @@ header.index {
 
 #insetTagline {
 	color: #000;
-	font-size: 1.5em;
+	font-size: 1.3em;
     font-family: 'Roboto';
     font-weight: 100;
 }
 
 #buttonImgWrapper {
-	margin-top: 1em;
-
+	margin-top: 0.9em;
 }
 
 .buttonImg {
-    height: 3.5em;
-    margin: 0 1.5em;
+    height: 3em;
+    margin: 0 1.3em;
 }
 
 /*
