--- a/stylesheet/base-rf.css
+++ b/stylesheet/base-rf.css
@@ -293,6 +293,50 @@ header.index {
 	margin: 0 auto;
 }
 
+.inputMini {
+	padding: .25em;
+	margin: 2em 1% 0 0;
+	background: #FFFFFF;
+	border: 1px solid #828282;
+	border-radius: 6px;
+	width: 60%;
+	height: 1.5em;
+	text-align: left;
+
+	font-size: 1.2em;
+	font-family: 'Roboto';
+	font-weight: 100;
+}
+
+.inputMini:active, .inputMini:focus, .inputMini:hover {
+    background: #FFFFFF;
+    box-shadow: inset 0 0 3px #029C40;
+}
+
+.actionButtonMini {
+	padding: .35em;
+	margin: 2em 0 0 1%;
+	background: none repeat scroll 0 0 #C0392B;
+	border-radius: 6px;
+	
+	font-size: 1.2em;
+	font-family: 'Roboto';
+	color: #ECF0F1;
+
+	line-height: 1.2em;
+	text-align: center;
+}
+
+.actionButtonMini:before, .actionButtonMini:after {
+	color: rgba(0,0,0,0);
+	content: "___";
+}
+
+.actionButtonMini:active, .actionButtonMini:focus, .actionButtonMini:hover {
+    background: none repeat scroll 0 0 #E74C3C;
+    text-decoration: none;
+}
+
 /*
 	FOOTER SECTION
 
