--- a/stylesheet/about.css
+++ b/stylesheet/about.css
@@ -17,14 +17,12 @@ header.about {
 #profileBox1 {
 	position: relative;
 	float: left;
-	border: 1px solid #000;
 	width: 440px;
 }
 
 #profileBox2 {
 	position: relative;
 	float: right;
-	border: 1px solid #D7E5ED;
 	width: 440px;
 }
 
@@ -33,11 +31,14 @@ header.about {
 }
 
 .profileTImg {
+	vertical-align: middle;
 	display: table-cell;
 	width: 220px;
+	height: 150px;
 }
 
 .profileTTitle {
+	vertical-align: middle;
 	display: table-cell;
 	width: 220px;
 }
@@ -53,5 +54,15 @@ header.about {
 	font-family: 'Roboto';
 	font-weight: 500;
 	font-size: 1.25em;
+	color: #34495E;
+}
+
+.profileBody {
+	padding: 25px 0;
+	text-align: left;
+	font-family: 'Roboto';
+	font-weight: 300;
+	font-size: 1.1em;
+	line-height: 1.5em;
 	color: #34495E;
 }
