--- a/stylesheet/base.css
+++ b/stylesheet/base.css
@@ -21,6 +21,7 @@ html, body {
 a {
 	text-decoration: none;
 	color: #3498db;
+	white-space: nowrap;
 }
 
 img {
@@ -313,7 +314,7 @@ header.index {
 
 .actionButtonMini {
 	padding: .35em;
-	margin: 2em 0 0 1%;
+	margin: 2em 0 0 .4em;
 	background: none repeat scroll 0 0 #C0392B;
 	border-radius: 6px;
 	
@@ -327,7 +328,7 @@ header.index {
 
 .actionButtonMini:before, .actionButtonMini:after {
 	color: rgba(0,0,0,0);
-	content: "___";
+	content: "__";
 }
 
 .actionButtonMini:active, .actionButtonMini:focus, .actionButtonMini:hover {
